@@ -1270,11 +1270,11 @@ static void integrate_heat_to_surface_on_bdry(np_t *np, gl_t *gl, zone_t zone,
 #endif
           if (_node_type(np[l], TYPELEVEL_FLUID)==BDRYTYPE) {
             if (find_bdry_direc(np, gl, l, TYPELEVEL_FLUID, &theta, &thetasgn)) {
-              /* find the shear forces at the wall */
               for (vartheta=0; vartheta<nd; vartheta++){
-	        if (thetasgn>0)
-                find_metrics_at_interface(np, gl, _al(gl,l,theta,+0), _al(gl,l,theta,+1), theta, &metricsp1h);
-                  else find_metrics_at_interface(np, gl, _al(gl,l,theta,-1), _al(gl,l,theta,+0), theta, &metricsp1h);
+                if (thetasgn>0)
+                  find_metrics_at_interface(np, gl, _al(gl,l,theta,+0), _al(gl,l,theta,+1), theta, &metricsp1h);
+                else 
+                  find_metrics_at_interface(np, gl, _al(gl,l,theta,-1), _al(gl,l,theta,+0), theta, &metricsp1h);
 
                 find_Kstar_interface(np,gl,_al(gl,l,theta,+0),_al(gl,l,theta,thetasgn),metricsp1h,theta,vartheta,Kp1h,CYCLELEVEL_RES);
                 for (row=0; row<nf; row++){
